# substrate-feeless-solochain-template

./: Cargo.toml  README.md  rust-toolchain.toml
node/: Cargo.toml
node/src/: benchmarking.rs  command.rs
pallets/feeless/: Cargo.toml  README.md
pallets/feeless/src/: benchmarking.rs  extensions.rs  lib.rs  mock.rs  tests.rs  types.rs  weights.rs
runtime/: Cargo.toml
runtime/src/: benchmarks.rs  lib.rs
runtime/src/configs/: account_data.rs  mod.rs
