[workspace.package]
license = "MIT-0"
authors = ["Parity Technologies <admin@parity.io>"]
homepage = "https://paritytechhub.io/polkadot-sdk/"
repository = "https://github.com/paritytech/polkadot-sdk-solochain-template"
edition = "2021"

[workspace]
members = [
    "node",
    "pallets/template",
    "pallets/feeless",
    "runtime",
]
resolver = "2"

[workspace.dependencies]
pallet-feeless = { path = "./pallets/feeless", default-features = false }

solochain-template-runtime = { path = "./runtime", default-features = false }
pallet-template = { path = "./pallets/template", default-features = false }
clap = { version = "4.5.10" }
frame-benchmarking-cli = { version = "*", default-features = false }
frame-metadata-hash-extension = { version = "*", default-features = false }
frame-system = { version = "*", default-features = false }
futures = { version = "0.3.30" }
jsonrpsee = { version = "0.24.3" }
pallet-transaction-payment = { version = "*", default-features = false }
pallet-transaction-payment-rpc = { version = "*", default-features = false }
sc-basic-authorship = { version = "*", default-features = false }
sc-cli = { version = "*", default-features = false }
sc-client-api = { version = "*", default-features = false }
sc-consensus = { version = "*", default-features = false }
sc-consensus-aura = { version = "*", default-features = false }
sc-consensus-grandpa = { version = "*", default-features = false }
sc-executor = { version = "*", default-features = false }
sc-network = { version = "*", default-features = false }
sc-offchain = { version = "*", default-features = false }
sc-service = { version = "*", default-features = false }
sc-telemetry = { version = "*", default-features = false }
sc-transaction-pool = { version = "*", default-features = false }
sc-transaction-pool-api = { version = "*", default-features = false }
serde_json = { version = "*", default-features = false }
sp-api = { version = "*", default-features = false }
sp-block-builder = { version = "*", default-features = false }
sp-blockchain = { version = "*", default-features = false }
sp-consensus-aura = { version = "*", default-features = false }
sp-consensus-grandpa = { version = "*", default-features = false }
sp-core = { version = "*", default-features = false }
sp-inherents = { version = "*", default-features = false }
sp-io = { version = "*", default-features = false }
sp-keyring = { version = "*", default-features = false }
sp-runtime = { version = "*", default-features = false }
sp-timestamp = { version = "*", default-features = false }
substrate-frame-rpc-system = { version = "*", default-features = false }
substrate-build-script-utils = { version = "*", default-features = false }
codec = { version = "3.6.12", default-features = false, package = "parity-scale-codec" }
frame-benchmarking = { version = "*", default-features = false }
frame-executive = { version = "*", default-features = false }
frame-support = { version = "*", default-features = false }
frame-system-benchmarking = { version = "*", default-features = false }
frame-system-rpc-runtime-api = { version = "*", default-features = false }
frame-try-runtime = { version = "*", default-features = false }
pallet-aura = { version = "*", default-features = false }
pallet-balances = { version = "*", default-features = false }
pallet-grandpa = { version = "*", default-features = false }
pallet-sudo = { version = "*", default-features = false }
pallet-timestamp = { version = "*", default-features = false }
pallet-utility = { version = "*", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "*", default-features = false }
scale-info = { version = "*", default-features = false }
sp-genesis-builder = { version = "*", default-features = false }
sp-offchain = { version = "*", default-features = false }
sp-session = { version = "*", default-features = false }
sp-storage = { version = "*", default-features = false }
sp-transaction-pool = { version = "*", default-features = false }
sp-version = { version = "*", default-features = false }
substrate-wasm-builder = { version = "*", default-features = false }
